Crostini restarting flow.

Once crostini is already installed, it needs to be restarted after
Chrome shuts down. These restart steps are all very fast in the case that
the default vm and container are already running. If not, there can be
a several second delay. Launching crostini apps always goes through this
flow and testing shows the impact is not user-noticeable when the
vm and container are running.

A future CL will add an observer to the
CrostiniRestarter class for this case.

Bug: 832509
Change-Id: I359e5a25c30664fad6425c218853dda204c605d9
Reviewed-on: https://chromium-review.googlesource.com/1013804
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Reviewed-by: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551593}
Former-commit-id: 55e6170f799adfd4c2e9881bb81f4231e139ae14